--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <style type="text/css"> body {background-color: #31312e} </style>
+        <title>Ilya home - welcome</title>
+        <style>
+            p {
+                color: red;
+                text-align: center;
+            } 
+        </style>
     </body>
 </html>
