--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <style type="text/css"> body {background-color: #31312e} </style>
-        <title>Ilya home - welcome</title>
-        <style>
-            p {
-                color: red;
-                text-align: center;
-            } 
-        </style>
+      <link rel="stylesheet" href="./style.css">
+      <title>Ilya home - welcome</title>
+        <h1>test</h1>
     </body>
 </html>
